--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@prisma/client": "5.15.0",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.11",
     "dotenv": "16.4.5",
     "fastify": "4.28.0",
     "zod": "3.23.8"
