--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "test": "vitest run --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:watch": "vitest --watch --dir src/use-cases ",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -25,6 +29,7 @@
     "@vitest/ui": "1.6.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
+    "npm-run-all": "4.1.5",
     "prettier": "3.3.2",
     "prisma": "5.15.0",
     "tsup": "8.1.0",
