--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest run --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
-    "test:watch": "vitest --watch --dir src/use-cases ",
+    "test:e2e:watch": "vitest --dir src/http",
+    "test:watch": "vitest --dir src/use-cases ",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -25,6 +26,7 @@
     "@types/bcryptjs": "2.4.6",
     "@types/eslint__js": "8.42.3",
     "@types/node": "20.14.2",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
     "eslint": "8.57.0",
@@ -32,6 +34,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "3.3.2",
     "prisma": "5.15.0",
+    "supertest": "7.0.0",
     "tsup": "8.1.0",
     "tsx": "4.15.4",
     "typescript": "5.4.5",
